turmites.lessons.turmites.langton.Langton.scala.error
LangtonsAnt:4: error: not found: value setCouleurSol
    setCouleurSol(Color.black);droite();avance()
    ^LangtonsAnt:9: error: not found: value setCouleurSol
    setCouleurSol(Color.white);gauche();avance()
    ^