turmites.lessons.turmites.langton.Langton.scala.code
def step() {
  if (getCouleurSol()==Color.white) {
    baisseBrosse()
    setCouleurSol(Color.black);droite();avance()
    leveBrosse()
  }
  else if (getCouleurSol()==Color.black) {
    baisseBrosse()
    setCouleurSol(Color.white);gauche();avance()
    leveBrosse()
  }
}